--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.13.5",
     "qrcode-terminal": "^0.12.0",
+    "sqlite3": "^5.0.2",
     "whatsapp-web.js": "^1.34.6"
   }
 }
